# apollo

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compile_commands.json  imgui.ini
apollo/core/: sensor_data.h  state.cpp  state.h  state_machine.cpp  state_machine.h
apollo/gui/: main.cpp
apollo/gui/panels/: sensors.h
apollo/src/: main.cpp
archive/: main.cpp
